Bug 291296 - Session picker isn't translated
Summary: Session picker isn't translated
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: session (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-11 20:31 UTC by Lasse Liehu
Modified: 2012-03-02 17:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2012-01-11 20:31:02 UTC
Version:           git master (using Devel) 
OS:                Linux

The picker is used before Core::initialize() is called, but the needed kdevplatform catalog isn't loaded before it is called. It's actually loaded when KComponentData is constructed in CorePrivate::CorePrivate.

Reproducible: Always

Steps to Reproduce:
1. Set x-test as the first KDE language
2. Run "kdevelop --ps"

Actual Results:  
Texts in picker dialog don't have xx's on them.

Expected Results:  
They should have xx's on them.
Comment 1 Lasse Liehu 2012-03-02 16:59:56 UTC
Git commit c26e58c538a6e22de1fc9b7c5a4b878caaacfdef by Lasse Liehu.
Committed on 02/03/2012 at 17:56.
Pushed by lliehu into branch '1.3'.

Translate session picker
REVIEW: 104108
FIXED-IN: 1.3

M  +3    -0    shell/sessioncontroller.cpp

http://commits.kde.org/kdevplatform/c26e58c538a6e22de1fc9b7c5a4b878caaacfdef
Comment 2 Lasse Liehu 2012-03-02 17:00:02 UTC
Git commit 36f4934384435ff2c747f935238e26dfedcbb722 by Lasse Liehu.
Committed on 02/03/2012 at 17:56.
Pushed by lliehu into branch 'master'.

Translate session picker
REVIEW: 104108
FIXED-IN: 1.3
(cherry picked from commit c26e58c538a6e22de1fc9b7c5a4b878caaacfdef)

M  +3    -0    shell/sessioncontroller.cpp

http://commits.kde.org/kdevplatform/36f4934384435ff2c747f935238e26dfedcbb722