Translate session picker

BUG: 291296
REVIEW: 104108
FIXED-IN: 1.3
(cherry picked from commit c26e58c538a6e22de1fc9b7c5a4b878caaacfdef)